2007-05-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.dj2 config/makefile.dj2: Updated Makefile for djgpp
	using a config.h file.

2007-05-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c src/util.h src/variable.c src/variable.h
	src/command.c:  Move numeric_locale from variable.c to util.c.

	* src/fit.c (fit_command) src/plot2d.c (get_data)
	src/plot3d.c (get_3ddata) src/datafile.c (df_reset_after_error):
	Apply user-specified numeric locale just before any data is read in from
	a data file.  Reset it to "C" afterwards.
	Bugs #1692541 #1707916

2007-05-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.d (ifilled_quadrangle): Initialize line style before
	setting color.  Bug #1715480

	* src/misc.c (lp_use_properties): Pay attention to the point flag
	even if we fall through to a default line type. Bug #1715480

2007-05-07  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: If the user specifies ./configure --with-plot but
	gives no explicit directory then try anyway because the necessary
	library may be in a standard place.  Bug #1654681

	Given how out of date the gnugraph/unixplot driver is, and the fact
	that gnuplot itself supports more output formats that the gnugraph
	format converter, it might be more reasonable just to drop this
	driver option altogether.

	* term/aquaterm.trm (AQUA_options): Allow terminal window ID to come
	from a variable.  Bug #1714070

2007-05-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.h src/graph3d.h: Rearrange the order of fields in the
	2D and 3D plot structures so that all fields they have in common are
	aligned in parallel. This facilitates consolidation of code that can
	apply to both 2D and 3D plots. It also points up several fields that
	were not in the 3D structure but should be (e.g. fillstyle).
	Impact: trivial increase in the size of the 3D plot structure.

	* term/gd.trm: Remove long-dead code and associated comment.
